--- a/www/theme/akademia/style.css
+++ b/www/theme/akademia/style.css
@@ -4,7 +4,7 @@ Theme URI: https://gacetagalenica.org
 Author: linkmoises
 Author URI: https://moisesserrano.com
 Description: Plantilla basada en Canvas HTML5 para gestionar el sitio web de la Gaceta Galénica
-Version: 0.1
+Version: 0.1-alfa
 License: GPLv3
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 */
